--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </nav>
 
       <div class="thumbnail">
-        <img src="images/titlepic.jpeg" class="img-fluid titleImage" alt="Responsive image">
+        <img src="images/PostcardCover.png" class="img-fluid titleImage" alt="Responsive image">
         <img src="images/mobileTitlepic.jpeg" class="img-fluid mobileTitleImage" alt="Responsive image">
 
         <div class="announcement">
