--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
       <div class="thumbnail">
         <img src="images/titlePic.jpeg" class="img-fluid titleImage" alt="Responsive image">
-        <img src="images/mobileTitlepic.jpeg" class="img-fluid mobileTitleImage" alt="Responsive image">
+        <img src="images/mobileTitlePic.jpeg" class="img-fluid mobileTitleImage" alt="Responsive image">
 
         <div class="announcement">
           <h1 class="titleText newMusicTitle">Angela Patini</h1>
