--- a/PClinks.html
+++ b/PClinks.html
@@ -27,7 +27,7 @@
 
 <body>
   <div class="backgroundMusic">
-    <img src="images/titlepic.jpeg" class="titleImage" alt="Responsive image">
+    <img src="images/titlePic.jpeg" class="titleImage" alt="Responsive image">
   </div>
 
   <div class="container-fluid">
