fixed weird social icon borders

--- a/index.html
+++ b/index.html
@@ -138,15 +138,9 @@
       <h3 class="col-1 offset-1 musc">Connect</h3>
     </div>
     <img src="images/connect.jpeg" class="img-fluid closingImg" alt="Responsive image">
-    <button type="button" name="button">
-      <a href="https://www.instagram.com/angelapatinimusic/"><i class="fab fa-instagram"></i></a>
-    </button>
-    <button type="button" name="button">
-      <a href="https://www.youtube.com/channel/UCV8Lqs9jSrs0Ok6YTDxJPQg?view_as=subscriber"><i class="fab fa-youtube-square"></i></a>
-    </button>
-    <button type="button" name="button">
-      <a href="mailto:angelapatinimusic@gmail.com"><i class="fas fa-envelope-square"></i></a>
-    </button>
+      <a href="https://www.instagram.com/angelapatinimusic/"><i class="fab fa-instagram icons"></i></a>
+      <a href="https://www.youtube.com/channel/UCV8Lqs9jSrs0Ok6YTDxJPQg?view_as=subscriber"><i class="fab fa-youtube-square icons"></i></a>
+      <a href="mailto:angelapatinimusic@gmail.com"><i class="fas fa-envelope-square icons"></i></a>
 
   </section>
 
