--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h3 class="col-1 offset-1 musc">Music</h3>
     </div>
 
-    <div id="carouselExampleControls" class="carousel slide" data-ride="false" data-interval="false">
+    <div id="albums" class="carousel slide" data-ride="false" data-interval="false">
       <div class="carousel-inner">
 
         <div class="carousel-item active">
@@ -86,7 +86,7 @@
               <p>Angela Patini</p>
               <p class="album">Postcard</p>
             </div>
-            <button type="button" class="btn btn-outline-light" name="button">
+            <button type="button" class="btn btn-dark btn-outline-dark" name="button">
               <a href="PClinks.html">STREAM/DOWNLOAD</a>
             </button>
           </div>
@@ -98,7 +98,7 @@
               <img src="images/HNTOCover.jpg" class="img-fluid" alt="Responsive image">
               <p>Angela Patini</p>
               <p class="album">He's Not The One</p>
-              <button type="button" class="btn btn-outline-light" name="button">
+              <button type="button" class="btn btn-dark btn-outline-dark" name="button">
                 <a href="HNTOlinks.html">STREAM/DOWNLOAD</a>
               </button>
             </div>
@@ -108,11 +108,11 @@
 
       </div>
 
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev" data-ride="false">
+      <a class="carousel-control-prev" href="#albums" role="button" data-slide="prev" data-ride="false">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#albums" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -126,10 +126,66 @@
 
   <section id="Videos">
     <div class="row">
-      <h3 class="col-1 offset-1 musc">Videos</h3>
+      <h3 class="offset-1 vid">Videos</h3>
     </div>
-    <img src="images/ComingSoon.jpeg" alt="">
-    <p>Coming Soon</p>
+
+    <div id="vids" class="carousel slide" data-ride="false" data-interval="false">
+      <div class="carousel-inner">
+
+        <div class="carousel-item active">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+          <iframe width="912" height="513" src="https://www.youtube.com/embed/qCWorXBbLS4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+        <iframe width="912" height="513" src="https://www.youtube.com/embed/YnW8kmz42LU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+          <iframe width="912" height="513" src="https://www.youtube.com/embed/tNB2gjXahK8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+          <iframe width="912" height="513" src="https://www.youtube.com/embed/58JtFc_Urjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+          <iframe width="912" height="513" src="https://www.youtube.com/embed/v9FLhyhYpJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+        <iframe width="912" height="513" src="https://www.youtube.com/embed/ZvFXH7eRUno" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+        <iframe width="912" height="513" src="https://www.youtube.com/embed/AK1xwRgUHK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="jumbotron jumbotron-fluid backgroundVideos">
+          <iframe width="912" height="513" src="https://www.youtube.com/embed/sj7pRaCicJ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+
+
+      </div>
+
+      <a class="carousel-control-prev" href="#vids" role="button" data-slide="prev" data-ride="false">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#vids" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+    </div>
 
   </section>
 
