ready for the interweb

--- a/index.html
+++ b/index.html
@@ -133,54 +133,54 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-          <iframe width="912" height="513" src="https://www.youtube.com/embed/qCWorXBbLS4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="iframe-container">
+              <iframe src="https://www.youtube.com/embed/qCWorXBbLS4" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/YnW8kmz42LU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-        <iframe width="912" height="513" src="https://www.youtube.com/embed/YnW8kmz42LU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/tNB2gjXahK8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-          <iframe width="912" height="513" src="https://www.youtube.com/embed/tNB2gjXahK8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/58JtFc_Urjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-          <iframe width="912" height="513" src="https://www.youtube.com/embed/58JtFc_Urjw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/v9FLhyhYpJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-          <iframe width="912" height="513" src="https://www.youtube.com/embed/v9FLhyhYpJE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/ZvFXH7eRUno" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-        <iframe width="912" height="513" src="https://www.youtube.com/embed/ZvFXH7eRUno" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/AK1xwRgUHK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-        <iframe width="912" height="513" src="https://www.youtube.com/embed/AK1xwRgUHK0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="jumbotron jumbotron-fluid backgroundVideos">
-          <iframe width="912" height="513" src="https://www.youtube.com/embed/sj7pRaCicJ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="iframe-container">
+            <iframe class="video" width="912" height="513" src="https://www.youtube.com/embed/sj7pRaCicJ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
 
 
       </div>
 
-      <a class="carousel-control-prev" href="#vids" role="button" data-slide="prev" data-ride="false">
+      <a class="carousel-control-prev prevAndNextButtons" href="#vids" role="button" data-slide="prev" data-ride="false">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#vids" role="button" data-slide="next">
+      <a class="carousel-control-next prevAndNextButtons" href="#vids" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -194,9 +194,9 @@
       <h3 class="col-1 offset-1 musc">Connect</h3>
     </div>
     <img src="images/connect.jpeg" class="img-fluid closingImg" alt="Responsive image">
-      <a href="https://www.instagram.com/angelapatinimusic/"><i class="fab fa-instagram icons"></i></a>
-      <a href="https://www.youtube.com/channel/UCV8Lqs9jSrs0Ok6YTDxJPQg?view_as=subscriber"><i class="fab fa-youtube-square icons"></i></a>
-      <a href="mailto:angelapatinimusic@gmail.com"><i class="fas fa-envelope-square icons"></i></a>
+    <a href="https://www.instagram.com/angelapatinimusic/"><i class="fab fa-instagram icons"></i></a>
+    <a href="https://www.youtube.com/channel/UCV8Lqs9jSrs0Ok6YTDxJPQg?view_as=subscriber"><i class="fab fa-youtube-square icons"></i></a>
+    <a href="mailto:angelapatinimusic@gmail.com"><i class="fas fa-envelope-square icons"></i></a>
 
   </section>
 
