--- a/HNTOmaybelinks.html
+++ b/HNTOmaybelinks.html
@@ -3,85 +3,83 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PC Links</title>
+  <title>HNTO Links</title>
 
-  <!-- Styles -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="linksStyles.css">
-
-
-  <!-- Font Awesome -->
-  <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Livvic|Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
+    <!-- Styles -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="linksStyles.css">
 
 
-  <!-- Bootstrap Scripts -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Livvic|Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
 
 
-</head>
+    <!-- Bootstrap Scripts -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
+
+  </head>
 <body>
   <div class="backgroundMusic">
     <img src="images/titlePic.jpeg" class="titleImage" alt="Responsive image">
   </div>
 
   <div class="container-fluid">
-    <img src="images/PostcardCover.png" class="img-fluid" alt="Responsive image">
+    <img src="images/HNTOCover.jpg" class="img-fluid" alt="Responsive image">
     <div class="title">
       <p>Angela Patini</p>
-      <p>Postcard</p>
+      <p>He's Not The One</p>
     </div>
-    <a href="https://open.spotify.com/album/7EfoZkUFeHXpumA3YKS85p">
+    <a href="https://open.spotify.com/album/6fj1tdNuUHm6vPmcwriYy3">
       <div class="link Spotify">
         <img width="125px" height="40px" style="display:inline-block;" src="https://b8dc26f18050b3315e3d-25699625cd604ffbdd1a1ecb34531b42.ssl.cf3.rackcdn.com/images/music-service_spotify.svg" alt="spotify">
         <button type="button" class="btn btn-outline-dark" name="button">
-          <a href="https://open.spotify.com/album/7EfoZkUFeHXpumA3YKS85p">
+          <a href="https://open.spotify.com/album/6fj1tdNuUHm6vPmcwriYy3">
             Play
           </a>
         </button>
       </div>
     </a>
-    <a href="https://music.apple.com/us/album/postcard-single/1456527828">
+    <a href="https://music.apple.com/us/album/hes-not-the-one-ep/1436052527">
       <div class="link applemusic">
         <img width="125px" height="40px" style="display:inline-block;" src="https://b8dc26f18050b3315e3d-25699625cd604ffbdd1a1ecb34531b42.ssl.cf3.rackcdn.com/images/music-service_applemusic.svg" alt="applemusic">
         <button type="button" class="btn btn-outline-dark" name="button">
-          <a href="https://music.apple.com/us/album/postcard-single/1456527828">
+          <a href="https://music.apple.com/us/album/hes-not-the-one-ep/1436052527">
             Play
           </a>
         </button>
       </div>
     </a>
-    <a href="https://music.amazon.com/albums/B07PR1HH14?ref=dm_sh_4c3f-19ba-dmcp-4702-9dbd9&musicTerritory=US&marketplaceId=ATVPDKIKX0DER">
+    <a href="https://music.amazon.com/albums/B07H9DV438?ref=dm_sh_a931-35c6-dmcp-477a-3ab99&musicTerritory=US&marketplaceId=ATVPDKIKX0DER">
       <div class="link applemusic">
         <img class="" width="125px" height="40px" style="display:inline-block;" src="https://b8dc26f18050b3315e3d-25699625cd604ffbdd1a1ecb34531b42.ssl.cf3.rackcdn.com/images/music-service_amazonmp3.svg" alt="amazonmp3">
         <button type="button" class="btn btn-outline-dark" name="button">
-          <a href="https://music.amazon.com/albums/B07PR1HH14?ref=dm_sh_4c3f-19ba-dmcp-4702-9dbd9&musicTerritory=US&marketplaceId=ATVPDKIKX0DER">
+          <a href="https://music.amazon.com/albums/B07H9DV438?ref=dm_sh_a931-35c6-dmcp-477a-3ab99&musicTerritory=US&marketplaceId=ATVPDKIKX0DER">
             Download
           </a>
         </button>
       </div>
     </a>
-    <a href="https://play.google.com/store/music/album/Angela_Patini_Postcard?id=Bigmgd2pnjzmuevj3nex4ubj2r4&hl=en_US">
+    <a href="https://play.google.com/store/music/album/Angela_Patini_He_s_Not_the_One?id=Bgrv3jkwnmffzcmabnssfd2tdcu&hl=en_US">
       <div class="link applemusic">
         <img class="" width="125px" height="40px" style="display:inline-block;" src="https://b8dc26f18050b3315e3d-25699625cd604ffbdd1a1ecb34531b42.ssl.cf3.rackcdn.com/images/music-service_google-play.svg" alt="google-play">
         <button type="button" class="btn btn-outline-dark" name="button">
-          <a href="https://play.google.com/store/music/album/Angela_Patini_Postcard?id=Bigmgd2pnjzmuevj3nex4ubj2r4&hl=en_US">
+          <a href="https://play.google.com/store/music/album/Angela_Patini_He_s_Not_the_One?id=Bgrv3jkwnmffzcmabnssfd2tdcu&hl=en_US">
             Download
           </a>
         </button>
       </div>
     </a>
-    <a href="https://tidal.com/browse/album/94983990">
+    <a href="https://tidal.com/browse/album/105980321">
       <div class="link applemusic">
         <img class="" width="125px" height="40px" style="display:inline-block;" src="https://b8dc26f18050b3315e3d-25699625cd604ffbdd1a1ecb34531b42.ssl.cf3.rackcdn.com/images/music-service_tidal.svg" alt="tidal">
         <button type="button" class="btn btn-outline-dark" name="button">
-          <a href="https://tidal.com/browse/album/94983990">
+          <a href="https://tidal.com/browse/album/105980321">
             Play
           </a>
         </button>
