jag release date added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="announcement">
           <h1 class="titleText newMusicTitle">Angela Patini</h1>
           <h2 class="titleText newSingle">Just A Game</h2>
-          <p>Single Out Soon</p>
+          <p>Out January 24th</p>
         </div>
 
       </div>
