just a game released

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
         <div class="announcement">
           <h1 class="titleText newMusicTitle">Angela Patini</h1>
           <h2 class="titleText newSingle">Just A Game</h2>
-          <p>Out January 24th</p>
+          <p>
+            <button type="button" class="btn btn-dark btn-outline-dark" name="button">
+              <a href="JustAGameLinks.html" class="jagLinks">STREAM/DOWNLOAD</a>
+            </button>
+          </p>
         </div>
 
       </div>
@@ -80,6 +84,19 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
+          <div class="jumbotron jumbotron-fluid backgroundMusic">
+            <div class="container">
+              <img src="images/jagCover.png" class="img-fluid" alt="Responsive image">
+              <p>Angela Patini</p>
+              <p class="album">Just A Game</p>
+            </div>
+            <button type="button" class="btn btn-dark btn-outline-dark" name="button">
+              <a href="JustAGameLinks.html">STREAM/DOWNLOAD</a>
+            </button>
+          </div>
+        </div>
+
+        <div class="carousel-item">
           <div class="jumbotron jumbotron-fluid backgroundMusic">
             <div class="container">
               <img src="images/PostcardCover.png" class="img-fluid" alt="Responsive image">
@@ -133,6 +150,11 @@
       <div class="carousel-inner">
 
         <div class="carousel-item active">
+            <div class="iframe-container">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/lDSyYv3HFzI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        <div class="carousel-item">
             <div class="iframe-container">
               <iframe src="https://www.youtube.com/embed/qCWorXBbLS4" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -211,7 +233,7 @@
       </p>
     </span>
   </nav>
-
+<!-- <script src="index.js" charset="utf-8"></script> -->
 </footer>
 
 
